examples/apps/djapp/2_meshed_application/meshed_app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-burnham
  labels:
    mesh: dj-app
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: jazz
  namespace: team-burnham
spec:
  awsName: jazz.team-burnham.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: jazz-router
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: metal
  namespace: team-burnham
spec:
  awsName: metal.team-burnham.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: metal-router
---
apiVersion: v1
kind: Service
metadata:
  name: jazz
  namespace: team-burnham
  labels:
    app: jazz
spec:
  ports:
  - port: 9080
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: metal
  namespace: team-burnham
  labels:
    app: metal
spec:
  ports:
  - port: 9080
    name: http
---
